[package]
name = "rust-coder"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Shaun Hamilton" ]
license = ""
repository = ""
default-run = "rust-coder"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.10", features = [ "all-api" ] }
tauri-api = { version = "0.7.5" }
tauri-utils = { version = "0.5.1" }
nfd = { version = "0.0.4" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "rust-coder"
path = "src/main.rs"
